--- a/frontend_app/src/app/core/page-index/page-index.component.html
+++ b/frontend_app/src/app/core/page-index/page-index.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container autosize="true">
     <mat-sidenav opened="true" mode="side">
         <div class="opciones">
-            <h3 *ngIf="expanded">Opciones del sistema</h3>
+            <h3 *ngIf="expanded">Opciones del Sistema</h3>
         </div>
         <app-menu (onToggleExpanded)="toggleExpanded($event)"></app-menu>
     </mat-sidenav>
