--- a/frontend_app/src/app/registration-members/registration-members.component.html
+++ b/frontend_app/src/app/registration-members/registration-members.component.html
@@ -1,1 +1,51 @@
-<p>registration-members works!</p>
+<body class="bg-gray-100 p-4">
+
+    <form action="#" method="POST" id="miFormulario" class="max-w-md mx-auto bg-white p-8 rounded shadow-md">
+      <h2 class="text-2xl font-bold mb-4 text-center">Registro de Integrantes</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+        <div class="mb-4">
+          <label for="cedula" class="block text-gray-700 font-bold mb-2">Cedula:</label>
+          <input type="text" id="cedula" name="cedula" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+        </div>
+        <div class="mb-4">
+          <label for="nombre" class="block text-gray-700 font-bold mb-2">Nombre:</label>
+          <input type="text" id="nombre" name="nombre" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+        </div>
+        <div class="mb-4">
+          <label for="apellido" class="block text-gray-700 font-bold mb-2">Apellido:</label>
+          <input type="text" id="apellido" name="apellido" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+        </div>
+        <div class="mb-4">
+          <label for="telefono" class="block text-gray-700 font-bold mb-2">Telefono:</label>
+          <input type="number" id="telefono" name="telefono" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+        </div>
+        <div class="mb-4">
+          <label for="correo" class="block text-gray-700 font-bold mb-2">Correo:</label>
+          <input type="text" id="correo" name="correo" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+        </div>
+        <div class="mb-4">
+          <label for="carrera" class="block text-gray-700 font-bold mb-2">Carrera:</label>
+          <input type="text" id="carrera" name="carrera" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+        </div>
+        <div class="mb-4">
+          <label for="semestre" class="block text-gray-700 font-bold mb-2">Semestre:</label>
+          <input type="text" id="semestre" name="semestre" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+        </div>
+        <div class="mb-4">
+          <label for="fecha" class="block text-gray-700 font-bold mb-2">Fecha de ingreso:</label>
+          <input type="date" id="fechaf" name="fechaf" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+        </div>
+        <div class="mb-4">
+          <label for="miCombobox" class="block text-gray-700 font-bold mb-2">Rol:</label>
+          <select id="miCombobox" name="miCombobox" class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+            <option value="opcion1">Lider</option>
+            <option value="opcion2">Colider</option>
+            <option value="opcion3">Miembro</option>
+          </select>
+        </div>
+      </div>
+      <button type="submit" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded hover:bg-blue-700">Guardar</button>
+    </form>
+  
+  </body>
+  
