--- a/frontend_app/src/app/login/login.component.html
+++ b/frontend_app/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="flex h-screen w-full items-center justify-center">
   <div class="w-full max-w-xs">
     <h1 class="font-bold text-3xl pb-10">Célula académica FISEI</h1>
-    <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+    <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4" [formGroup]="login" (ngSubmit)="onLogin()">
       <h2 class="text-center text-2xl font-bold mb-6">Inicio de sesión</h2>
       <div class="mb-4 ml-24"> 
         <img src="../../favicon.ico" alt="">
@@ -15,7 +15,7 @@
         </label>
         <input
           class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-          id="username"
+          formControlName="email"
           type="text"
           placeholder="Ingrese su correo"
         />
@@ -29,7 +29,7 @@
         </label>
         <input
           class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
-          id="password"
+          formControlName="password"
           type="password"
           placeholder="Ingrese su contraseña"
         />
@@ -37,8 +37,7 @@
       <div class="flex items-center justify-center">
         <button
           class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-          type="button"
-          (click)="onLogin()"
+          type="submit"
         >
           Aceptar
         </button>
