correction of errors

--- a/frontend_app/src/app/core/form/form.component.html
+++ b/frontend_app/src/app/core/form/form.component.html
@@ -5,7 +5,7 @@
   </button>
 </mat-toolbar>
 <mat-dialog-content>
-  <form method="POST" id="miFormulario" class="max-w-md mx-auto bg-white p-8 rounded shadow-md" [formGroup]="group" (ngSubmit)="save()">
+  <form method="POST" id="miFormulario" class="max-w-md mx-auto bg-white p-8 rounded shadow-md"  (ngSubmit)="save()">
       <h2 class="text-2xl font-bold mb-4 text-center">Registro de Integrantes</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
         <div class="mb-4">
