--- a/frontend_app/src/app/registrationprojects/registrationprojects.component.html
+++ b/frontend_app/src/app/registrationprojects/registrationprojects.component.html
@@ -10,7 +10,7 @@
         </div>
         <div class="mb-4">
           <label for="descripcion" class="block text-gray-700 font-bold mb-2">Descripción:</label>
-          <input type="text" formControlName="descripcion" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+          <input type="text" formControlName="description" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
         </div>
         <div class="mb-4">
           <label for="fecha" class="block text-gray-700 font-bold mb-2">Fecha de inicio:</label>
