Cration for project modification form

--- a/frontend_app/src/app/resgistration-tasks/resgistration-tasks.component.html
+++ b/frontend_app/src/app/resgistration-tasks/resgistration-tasks.component.html
@@ -22,7 +22,7 @@
           </div>
           <div class="mb-4">
             <label for="evidence" class="block text-gray-700 font-bold mb-2">Evidencia:</label>
-            <input type="text" formControlName="evidence" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+            <input type="text" formControlName="evidence" class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
           </div>
           <div class="mb-4">
             <label for="project" class="block text-gray-700 font-bold mb-2">Proyecto:</label>
