--- a/frontend_app/src/app/member-edit-form/member-edit-form.component.html
+++ b/frontend_app/src/app/member-edit-form/member-edit-form.component.html
@@ -1,8 +1,12 @@
 <body class="bg-gray-100 p-4">
 
-  <form method="POST" id="memberForm" class="max-w-md mx-auto bg-white p-8 rounded shadow-md" [formGroup]="group" (ngSubmit)="save()">
+  <form class="max-w-md mx-auto bg-white p-8 rounded shadow-md" [formGroup]="group" (ngSubmit)="save()">
     <h2 class="text-2xl font-bold mb-4 text-center">{{ title }}</h2>
     <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+      <div class="mb-4">
+        <label for="card" class="block text-gray-700 font-bold mb-2">Cedula:</label>
+        <input type="text" id="card" formControlName="card" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+      </div>
       <div class="mb-4">
         <label for="name" class="block text-gray-700 font-bold mb-2">Nombre:</label>
         <input type="text" id="name" formControlName="name" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
@@ -17,11 +21,11 @@
       </div>
       <div class="mb-4">
         <label for="major" class="block text-gray-700 font-bold mb-2">Carrera:</label>
-        <input type="text" id="major" formControlName="major" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+        <input type="text" id="major" formControlName="idMajor" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
       </div>
       <div class="mb-4">
         <label for="rol" class="block text-gray-700 font-bold mb-2">Rol:</label>
-        <input type="text" id="rol" formControlName="rol" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+        <input type="text" id="rol" formControlName="idRol" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
       </div>
     </div>
     <button type="submit" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded hover:bg-blue-700">Guardar</button>
