--- a/frontend_app/src/app/project-edit-form/project-edit-form.component.html
+++ b/frontend_app/src/app/project-edit-form/project-edit-form.component.html
@@ -1,31 +1,29 @@
 <body class="bg-gray-100 p-4">
-    <form class="max-w-md mx-auto bg-white p-8 rounded shadow-md" [formGroup]="group" (ngSubmit)="save()">
-      <h2 class="text-2xl font-bold mb-4 text-center">{{ title }} Project</h2>
-      <div class="grid grid-cols-2 gap-4">
-        <div>
-          <div class="mb-4">
-            <label for="name" class="block text-gray-700 font-bold mb-2">Nombre:</label>
-            <input type="text" id="name" formControlName="name" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
-          </div>
-          <div class="mb-4">
-            <label for="description" class="block text-gray-700 font-bold mb-2">Descripción:</label>
-            <input type="text" id="description" formControlName="description" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
-          </div>
-          <div class="mb-4">
-            <label for="dateStart" class="block text-gray-700 font-bold mb-2">Fecha de inicio:</label>
-            <input type="date" id="dateStart" formControlName="startDate" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
-          </div>
-          <div class="mb-4">
-            <label for="dateEnd" class="block text-gray-700 font-bold mb-2">Fecha de Fin:</label>
-            <input type="date" id="dateEnd" formControlName="endDate" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
-          </div>
-          <div class="mb-4">
-            <label for="club" class="block text-gray-700 font-bold mb-2">Club:</label>
-            <input type="text" id="club" formControlName="idClub" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
-          </div>
-        </div>
+  <form class="max-w-md mx-auto bg-white p-8 rounded shadow-md" [formGroup]="group" (ngSubmit)="save()">
+    <h2 class="text-2xl font-bold mb-4 text-center">{{ title }} PROYECTO</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+      <div class="mb-4">
+        <label for="name" class="block text-gray-700 font-bold mb-2">Nombre:</label>
+        <input type="text" id="name" formControlName="name" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
       </div>
-      <button type="submit" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded hover:bg-blue-700">Guardar</button>
-    </form>
-  </body>
-  
+      <div class="mb-4">
+        <label for="description" class="block text-gray-700 font-bold mb-2">Descripción:</label>
+        <input type="text" id="description" formControlName="description" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+      </div>
+      <div class="mb-4">
+        <label for="dateStart" class="block text-gray-700 font-bold mb-2">Fecha de inicio:</label>
+        <input type="date" id="dateStart" formControlName="startDate" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+      </div>
+      <div class="mb-4">
+        <label for="dateEnd" class="block text-gray-700 font-bold mb-2">Fecha de Fin:</label>
+        <input type="date" id="dateEnd" formControlName="endDate" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+      </div>
+      <div class="mb-4">
+        <label for="club" class="block text-gray-700 font-bold mb-2">Club:</label>
+        <input type="text" id="club" formControlName="idClub" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+      </div>
+    </div>
+    <button type="submit" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded hover:bg-blue-700">Guardar</button>
+    <button type="button" class="w-full bg-red-500 text-white font-bold py-2 px-4 rounded hover:bg-red-700 mt-4" (click)="closeForm()">Cerrar</button>
+  </form>
+</body>
