--- a/frontend_app/src/app/project-edit-form/project-edit-form.component.html
+++ b/frontend_app/src/app/project-edit-form/project-edit-form.component.html
@@ -18,9 +18,11 @@
         <label for="dateEnd" class="block text-gray-700 font-bold mb-2">Fecha de Fin:</label>
         <input type="date" id="dateEnd" formControlName="endDate" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
       </div>
-      <div class="mb-4">
-        <label for="club" class="block text-gray-700 font-bold mb-2">Club:</label>
-        <input type="text" id="club" formControlName="idClub" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+      <div class="mb-4">        
+        <label for="club" class="block text-gray-700 font-bold mb-2">Club:</label>          
+          <select formControlName="idClub" id="club" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+            <option *ngFor="let club of clubsData" [value]="club.id">{{ club.Nombre }}</option>
+          </select>
       </div>
     </div>
     <button type="submit" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded hover:bg-blue-700">Guardar</button>
