Changes were made to the interface for better usability

--- a/frontend_app/src/app/club-edit-form/club-edit-form.component.html
+++ b/frontend_app/src/app/club-edit-form/club-edit-form.component.html
@@ -11,8 +11,10 @@
                 <input type="text" id="description" formControlName="description" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
             </div>
             <div class="mb-4">
-                <label for="responsibleCard" class="block text-gray-700 font-bold mb-2">Cedula responsable:</label>
-                <input type="text" id="cardResponsible" formControlName="cardResponsible" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+                <label for="responsibleCard" class="block text-gray-700 font-bold mb-2">Cedula responsable:</label>                
+                <select formControlName="cardResponsible" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+                    <option *ngFor="let member of memberData" [value]="member.cedula">{{ member.cedula }}</option>
+                  </select>
             </div>
         </div>
         <button type="submit" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded hover:bg-blue-700">Guardar</button>
