--- a/frontend_app/src/app/tasks-edit-form/tasks-edit-form.component.html
+++ b/frontend_app/src/app/tasks-edit-form/tasks-edit-form.component.html
@@ -23,8 +23,10 @@
         <input type="text" id="evidence" formControlName="evidence" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
       </div>
       <div class="mb-4">
-        <label for="idProject" class="block text-gray-700 font-bold mb-2">Proyecto:</label>
-        <input type="number" id="idProject" formControlName="idProject" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+        <label for="idProject" class="block text-gray-700 font-bold mb-2">Proyecto:</label>        
+        <select formControlName="idProject" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+          <option *ngFor="let project of projectData" [value]="project.id">{{ project.Nombre }}</option>
+        </select>
       </div>
     </div>
     <button type="submit" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded hover:bg-blue-700">Guardar</button>
