--- a/frontend_app/src/app/registration-members/registration-members.component.html
+++ b/frontend_app/src/app/registration-members/registration-members.component.html
@@ -13,7 +13,7 @@
       </div>
       <div class="mb-4">
         <label for="cedula" class="block text-gray-700 font-bold mb-2">Cedula:</label>
-        <input type="text" formControlName="card" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+        <input type="number" formControlName="card" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
       </div>
       <div class="mb-4">
         <label for="nombre" class="block text-gray-700 font-bold mb-2">Nombre:</label>
@@ -34,21 +34,31 @@
         </select>
       </div>
       <div class="mb-4">
-        <label for="semestre" class="block text-gray-700 font-bold mb-2">Semestre:</label>
-        <input type="text" formControlName="semester" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+        <label for="semestre" class="block text-gray-700 font-bold mb-2">Semestre:</label>        
+        <select formControlName="semester" class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+          <option value="Primero">Primero</option>
+          <option value="Segundo">Segundo</option>
+          <option value="Tercero">Tercero</option>
+          <option value="Cuarto">Cuarto</option>
+          <option value="Quinto">Quinto</option>
+          <option value="Sexto">Sexto</option>
+          <option value="Séptimo">Séptimo</option>
+          <option value="Octavo">Octavo</option>
+          <option value="Noveno">Noveno</option>
+        </select>
       </div>
       <div class="mb-4">
         <label for="fecha" class="block text-gray-700 font-bold mb-2">Fecha de ingreso:</label>
         <input type="date" id="fechaf" name="fechaf" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
-      </div>
-      <div class="mb-4">
-        <label for="miCombobox" class="block text-gray-700 font-bold mb-2">Rol:</label>
-        <select formControlName="rol" class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
-          <option value="1">Lider</option>
-          <option value="2">Colider</option>
-          <option value="3">Miembro</option>
-        </select>
-      </div>
+      </div>      
+        <div class="mb-4 col-span-2">
+          <label for="miCombobox" class="block text-gray-700 font-bold mb-2">Rol:</label>
+          <select formControlName="rol" class="px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+            <option value="1">Lider</option>
+            <option value="2">Colider</option>
+            <option value="3">Miembro</option>
+          </select>
+        </div>      
     </div>
     <button type="submit" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded hover:bg-blue-700">Guardar</button>
   </form>
