Creation of the module with reference to the groups

--- a/frontend_app/src/app/university-list/university-list.component.html
+++ b/frontend_app/src/app/university-list/university-list.component.html
@@ -17,6 +17,7 @@
     <app-paginator
       fxLayout
       fxLayoutAlign="end center"
+      [lenght]="totalRecords"
       (onChangePage)="changePage($event)"
     ></app-paginator>
   </app-container>
