--- a/frontend_app/src/app/core/menu/menu.component.css
+++ b/frontend_app/src/app/core/menu/menu.component.css
@@ -1,25 +1,57 @@
 mat-nav-list {
     width: 95%;
     height: calc(100vh - 74px);
-}
-mat-list-item{
-    margin-top: 10px;
+  }
+  
+  mat-list-item {
+    margin-top: 20px;
     border-radius: 0 24px 24px 0;
-}
-mat-list-item img{
+  }
+  
+  mat-list-item img {
     border-radius: 50%;
     width: 24px;
     height: 24px;
-}
-span{
+  }
+  
+  span {
     display: inline-block;
-    padding-left: 8px;
-    font-size: 18px;
-}
-a,
-a:link,
-a:visited,
-a:active {
+    padding-left: 20px;
+    font-size: 20px;
+  }
+  
+  a,
+  a:link,
+  a:visited,
+  a:active {
     color: white !important;
     font-size: 14px;
-}
+  }
+  
+  .mat-menu-content {
+    font-size: 14px;
+  }
+  
+  .mat-menu-item {
+    padding: 8px 16px;
+  }
+  
+  .mat-menu-item img {
+    width: 20px;
+    height: 20px;
+  }
+  .small-menu {
+    max-height: 200px;
+    overflow-y: auto;
+  }
+  .mat-mdc-menu-item {
+    font-size: 14px; /* Reducir tamaño de fuente */
+    padding: 8px 16px; /* Reducir espaciado interno */
+  }
+  
+  .mat-mdc-menu-item img {
+    width: 20px; /* Reducir tamaño de íconos */
+    height: 20px;
+  }
+    
+  
