--- a/frontend_app/src/app/login/login.component.html
+++ b/frontend_app/src/app/login/login.component.html
@@ -1,10 +1,10 @@
 <div class="flex h-screen w-full items-center justify-center">
   <div class="w-full max-w-xs">
     <h1 class="font-bold text-3xl pb-10">Célula académica FISEI</h1>
-    <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4" [formGroup]="login" (ngSubmit)="onLogin()">
+    <form class="bg-slate-400 shadow-md rounded px-8 pt-6 pb-8 mb-4" [formGroup]="login" (ngSubmit)="onLogin()">
       <h2 class="text-center text-2xl font-bold mb-6">Inicio de sesión</h2>
-      <div class="mb-4 ml-24"> 
-        <img src="../../favicon.ico" alt="">
+      <div class="flex justify-center mb-4"> 
+        <img class="w-24" src="../../assets/icons/Usuario.png" alt="">
       </div>      
       <div class="mb-4">
         <label
