--- a/frontend_app/src/app/event-edit-form/event-edit-form.component.html
+++ b/frontend_app/src/app/event-edit-form/event-edit-form.component.html
@@ -22,6 +22,14 @@
           <label for="typeEvent" class="block text-gray-700 font-bold mb-2">Tipo de Evento:</label>
           <input type="text" id="typeEvent" formControlName="typeEvent" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
         </div>
+        <div class="mb-4">
+          <label for="status" class="block text-gray-700 font-bold mb-2">Estado del evento:</label>
+          <select id="status" formControlName="status" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+            <option value="Proximo">Proximo</option>
+            <option value="En progreso">En progreso</option>
+            <option value="Finalizado">Finalizado</option>
+          </select>
+        </div>
       </div>
       <button type="submit" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded hover:bg-blue-700">Guardar</button>
       <button type="button" class="w-full bg-red-500 text-white font-bold py-2 px-4 rounded hover:bg-red-700 mt-4" (click)="closeForm()">Cerrar</button>
