--- a/frontend_app/src/app/registration-events/registration-events.component.html
+++ b/frontend_app/src/app/registration-events/registration-events.component.html
@@ -24,8 +24,16 @@
             <option value="Conferencia">Conferencia</option>
             <option value="Seminario">Seminario</option>
             <option value="Taller">Taller</option>
-            <option value="Webinar">Webinar</option>
+            <option value="Concurso">Concurso</option>
             <option value="Reunión">Reunión</option>
+          </select>
+        </div>
+        <div class="mb-4">
+          <label for="status" class="block text-gray-700 font-bold mb-2">Estado del evento:</label>
+          <select id="status" formControlName="status" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+            <option value="Proximo">Proximo</option>
+            <option value="En progreso">En progreso</option>
+            <option value="Finalizado">Finalizado</option>
           </select>
         </div>
       </div>
