--- a/frontend_app/src/app/app.component.html
+++ b/frontend_app/src/app/app.component.html
@@ -1,8 +1,7 @@
-<div *ngIf="isLoginRoute; else mainContent">
-    <router-outlet></router-outlet>
-  </div>
-  <ng-template #mainContent>
-    <app-page-index></app-page-index>
-  </ng-template>
-  
-  
+<ng-template #mainContent>
+  <app-page-index></app-page-index>
+</ng-template>
+
+<div *ngIf="isLoginRoute || isRegisterRoute; else mainContent">
+  <router-outlet></router-outlet>
+</div>
