--- a/frontend_app/src/app/competitions-list/competitions-list.component.html
+++ b/frontend_app/src/app/competitions-list/competitions-list.component.html
@@ -1,3 +1,4 @@
+<h1 class="font-bold text-3xl pb-10 text-center">Lista de concursos</h1>
 <app-container>
   <ng-scrollbar class="heightMaxScrollbar">
     <app-table [data]="data" [metaDataColumns]="MetaDataColumn">
