--- a/frontend_app/src/app/events-list/events-list.component.html
+++ b/frontend_app/src/app/events-list/events-list.component.html
@@ -1,5 +1,6 @@
 <app-container>
-    <ng-scrollbar class="heightMaxScrollbar">
+  <h1 class="font-bold text-3xl pb-10 text-center">Eventos</h1>
+  <ng-scrollbar class="heightMaxScrollbar">
       <app-table [data]="data" [metaDataColumns]="MetaDataColumn">
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef></th>
