--- a/frontend_app/src/app/project-edit-form/project-edit-form.component.html
+++ b/frontend_app/src/app/project-edit-form/project-edit-form.component.html
@@ -19,9 +19,9 @@
         <input type="date" id="dateEnd" formControlName="endDate" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
       </div>
       <div class="mb-4">        
-        <label for="club" class="block text-gray-700 font-bold mb-2">Club:</label>          
-          <select formControlName="idClub" id="club" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
-            <option *ngFor="let club of clubsData" [value]="club.id">{{ club.Nombre }}</option>
+        <label for="Club" class="block text-gray-700 font-bold mb-2">Club:</label>          
+          <select formControlName="Club" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+            <option *ngFor="let club of clubsData" [value]="club.Nombre">{{ club.Nombre }}</option>
           </select>
       </div>
     </div>
