--- a/frontend_app/src/app/project-list/project-list.component.html
+++ b/frontend_app/src/app/project-list/project-list.component.html
@@ -1,4 +1,5 @@
 <app-container>
+    <h1 class="font-bold text-3xl pb-10 text-center">Proyectos</h1>
   <ng-scrollbar class="heightMaxScrollbar">
     <app-table [data]="data" [metaDataColumns]="MetaDataColumn">
     <ng-container matColumnDef="actions">
