--- a/frontend_app/src/app/resgistration-tasks/resgistration-tasks.component.html
+++ b/frontend_app/src/app/resgistration-tasks/resgistration-tasks.component.html
@@ -1,16 +1,12 @@
 <body class="bg-gray-100 p-4">
 
-  <form  method="POST" id="miFormulario" class="max-w-md mx-auto bg-white p-8 rounded shadow-md" [formGroup]="register" (ngSubmit)="onSubmit()">
+  <form method="POST" id="miFormulario" class="max-w-md mx-auto bg-white p-8 rounded shadow-md" [formGroup]="register" (ngSubmit)="onSubmit()">
     <h2 class="text-2xl font-bold mb-4 text-center">Registro de Tareas</h2>
     <div class="grid grid-cols-2 gap-4">
-      <div class="col-span-2">
+      <div>
         <div class="mb-4">
           <label for="nombre" class="block text-gray-700 font-bold mb-2">Nombre:</label>
           <input type="text" formControlName="name" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
-        </div>
-        <div class="mb-4">
-          <label for="description" class="block text-gray-700 font-bold mb-2">Descripción:</label>
-          <textarea formControlName="description" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500"></textarea>
         </div>
         <div class="mb-4">
           <label for="limitDate" class="block text-gray-700 font-bold mb-2">Fecha limite:</label>
@@ -22,6 +18,12 @@
             <option value="En curso">En curso</option>
             <option value="Finalizado">Finalizado</option>
           </select>
+        </div>
+      </div>
+      <div>
+        <div class="mb-4">
+          <label for="description" class="block text-gray-700 font-bold mb-2">Descripción:</label>
+          <textarea formControlName="description" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500"></textarea>
         </div>
         <div class="mb-4">
           <label for="evidence" class="block text-gray-700 font-bold mb-2">Evidencia:</label>
