Error correction and addition of modules for the management of participants in contest type events.

--- a/frontend_app/src/app/app.component.html
+++ b/frontend_app/src/app/app.component.html
@@ -2,6 +2,6 @@
   <app-page-index></app-page-index>
 </ng-template>
 
-<div *ngIf="isLoginRoute || isRegisterRoute; else mainContent">
+<div *ngIf="isLoginRoute || isRegisterRoute || isConcursoRoute; else mainContent">
   <router-outlet></router-outlet>
 </div>
