--- a/frontend_app/src/app/competitions-list/competitions-list.component.html
+++ b/frontend_app/src/app/competitions-list/competitions-list.component.html
@@ -1,25 +1,45 @@
-<h1 class="font-bold text-3xl pb-10 text-center">Lista de concursos</h1>
-<app-container>
-  <ng-scrollbar class="heightMaxScrollbar">
-    <app-table [data]="data" [metaDataColumns]="MetaDataColumn">
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let row"> 
-          <button mat-icon-button color="primary" (click)="openForm(row)">
-            <mat-icon>edit</mat-icon>
-          </button>
-          <button mat-icon-button color="accent" (click)="delete(row.id)">
-            <mat-icon>delete</mat-icon>
-          </button>
-        </td>
-      </ng-container>
-    </app-table>
-  </ng-scrollbar>
+<app-container class="container">
+  <h1 class="font-bold text-3xl pb-10 text-center">Lista de concursos</h1>
+  <table mat-table [dataSource]="field" class="mat-elevation-z8">
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef>ID</th>
+      <td mat-cell *matCellDef="let competition">{{ competition.id }}</td>
+    </ng-container>
+    <ng-container matColumnDef="type">
+      <th mat-header-cell *matHeaderCellDef>Tipo de Competencia</th>
+      <td mat-cell *matCellDef="let competition">{{ competition.type }}</td>
+    </ng-container>
+    <ng-container matColumnDef="numParticipants">
+      <th mat-header-cell *matHeaderCellDef>Número de Participantes</th>
+      <td mat-cell *matCellDef="let competition">{{ competition.numParticipants }}</td>
+    </ng-container>
+    <ng-container matColumnDef="price">
+      <th mat-header-cell *matHeaderCellDef>Valor de Inscripción</th>
+      <td mat-cell *matCellDef="let competition">{{ competition.price }}</td>
+    </ng-container>
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef>Estado</th>
+      <td mat-cell *matCellDef="let competition">{{ competition.status }}</td>
+    </ng-container>
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Acciones</th>
+      <td mat-cell *matCellDef="let competition">
+        <button mat-icon-button color="primary" (click)="openForm(competition)">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button color="warn" (click)="delete(competition.id)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
   <app-paginator
     fxLayout
     fxLayoutAlign="end center"
     [lenght]="totalRecords"
-    (onChangePage)="changePage($event)"
-  >
+    (onChangePage)="changePage($event)">
   </app-paginator>
 </app-container>
