--- a/frontend_app/src/app/groups-list/groups-list.component.html
+++ b/frontend_app/src/app/groups-list/groups-list.component.html
@@ -1,25 +1,41 @@
-<app-container>
+<app-container class="container">
   <h1 class="font-bold text-3xl pb-10 text-center">Grupos</h1>
-  <ng-scrollbar class="heightMaxScrollbar">
-      <app-table [data]="data" [metaDataColumns]="MetaDataColumn">
-        <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef></th>
-          <td mat-cell *matCellDef="let row"> 
-            <button mat-icon-button color="primary" (click)="openForm(row)">
-              <mat-icon>edit</mat-icon>
-            </button>
-            <button mat-icon-button color="accent" (click)="delete(row.id)">
-              <mat-icon>delete</mat-icon>
-            </button>
-          </td>
-        </ng-container>
-      </app-table>
-    </ng-scrollbar>
-    <app-paginator
-      fxLayout
-      fxLayoutAlign="end center"
-      [lenght]="totalRecords"
-      (onChangePage)="changePage($event)">
-    </app-paginator>
-  </app-container>
-  
+  <table mat-table [dataSource]="data" class="mat-elevation-z8">
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef>ID</th>
+      <td mat-cell *matCellDef="let group">{{ group.id }}</td>
+    </ng-container>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Nombre del Grupo</th>
+      <td mat-cell *matCellDef="let group">{{ group.name }}</td>
+    </ng-container>
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef>Descripción</th>
+      <td mat-cell *matCellDef="let group">{{ group.description }}</td>
+    </ng-container>
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef>Habilitado</th>
+      <td mat-cell *matCellDef="let group">{{ group.status }}</td>
+    </ng-container>
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Acciones</th>
+      <td mat-cell *matCellDef="let group">
+        <button mat-icon-button color="primary" (click)="openForm(group)">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button color="warn" (click)="delete(group.id)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  <app-paginator
+    fxLayout
+    fxLayoutAlign="end center"
+    [lenght]="totalRecords"
+    (onChangePage)="changePage($event)">
+  </app-paginator>
+</app-container>
