--- a/frontend_app/src/app/list-participants/list-participants.component.html
+++ b/frontend_app/src/app/list-participants/list-participants.component.html
@@ -1,25 +1,46 @@
-<app-container>
+<app-container class="container">
     <h1 class="font-bold text-3xl pb-10 text-center">Participantes</h1>
-  <ng-scrollbar class="heightMaxScrollbar">
-    <app-table [data]="data" [metaDataColumns]="MetaDataColumn">
-    <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let row"> 
-            <button mat-icon-button color="primary" (click)="openForm(row)">
-                <mat-icon>edit</mat-icon>
-            </button>
-            <button mat-icon-button color="accent" (click)="delete(row.card)">
-                <mat-icon>delete</mat-icon>
-            </button>
+    <table mat-table [dataSource]="data" class="mat-elevation-z8">
+      <ng-container matColumnDef="card">
+        <th mat-header-cell *matHeaderCellDef>Cedula</th>
+        <td mat-cell *matCellDef="let participant">{{ participant.card }}</td>
+      </ng-container>
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Nombre del Participante</th>
+        <td mat-cell *matCellDef="let participant">{{ participant.name }}</td>
+      </ng-container>
+      <ng-container matColumnDef="lastName">
+        <th mat-header-cell *matHeaderCellDef>Apellido del Participante</th>
+        <td mat-cell *matCellDef="let participant">{{ participant.lastName }}</td>
+      </ng-container>
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef>Correo</th>
+        <td mat-cell *matCellDef="let participant">{{ participant.email }}</td>
+      </ng-container>
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef>Estado</th>
+        <td mat-cell *matCellDef="let participant">{{ participant.status }}</td>
+      </ng-container>
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef>Acciones</th>
+        <td mat-cell *matCellDef="let participant">
+          <button mat-icon-button color="primary" (click)="openForm(participant)">
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button mat-icon-button color="warn" (click)="delete(participant.card)">
+            <mat-icon>delete</mat-icon>
+          </button>
         </td>
-    </ng-container>
-</app-table>
-</ng-scrollbar>
-<app-paginator
-fxLayout
-fxLayoutAlign="end center"
-[lenght]="totalRecords"
-(onChangePage)="changePage($event)"
->
-</app-paginator>
-    </app-container>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    <app-paginator
+      fxLayout
+      fxLayoutAlign="end center"
+      [lenght]="totalRecords"
+      (onChangePage)="changePage($event)">
+    </app-paginator>
+  </app-container>
+  
