--- a/frontend_app/src/app/registration-participants/registration-participants.component.html
+++ b/frontend_app/src/app/registration-participants/registration-participants.component.html
@@ -60,7 +60,7 @@
     <button type="submit" [disabled]="registerForm.invalid" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded hover:bg-blue-700 disabled:bg-gray-400 disabled:cursor-not-allowed">Guardar</button>
 
     <div class="flex mt-4">
-      <button class="bg-green-500 hover:bg-green-700 text-white text-center font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button" [disabled]="registerForm.invalid" (click)="registrarConcurso()">
+      <button class="bg-green-500 hover:bg-green-700 text-white text-center font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button" (click)="registrarConcurso()">
         Completar Registro
       </button>
     </div>
